...

/**
 * test tags to be used in compose
 */
enum class TestTag {
    List,
    AppBarBackButton,
    AppBarTitle,
    BottomAppBarDiscard,
    BottomAppBarSave,
    LibrariesContainer,
    MicrophoneOverlaySizeOptions,
    MicrophoneFab,
    Indication,
    Overlay,

    AudioPlayingOptions,
    AudioOutputOptions,
    Endpoint,
    AccessToken,
    SendEvents,
    SendIntents,
    AudioRecordingUdpHost,
    AudioRecordingUdpPort,

    ConfigurationScreenItemContent,
    ConfigurationSiteId,
    CustomEndpointSwitch,
    MqttSilenceDetectionSwitch,

...
    WakeWordOptions,

    TextAsrTimeout,
    IntentRecognitionTimeout,
    RecordingTimeout,

    ServerSwitch,
    MqttSwitch,
    Host,
    Port,
    Timeout,
    UserName,
    Password,
    SSLSwitch,
    CertificateButton,
    ConnectionTimeout,
    KeepAliveInterval,
    RetryInterval,

    PorcupineWakeWordSettings,
    PorcupineAccessToken,
    PorcupineOpenConsole,
    PorcupineKeyword,
    PorcupineLanguage,
    PorcupineKeywordScreen,
    PorcupineLanguageScreen,
    PorcupineKeywordCustomScreen,
    PorcupineKeywordDefaultScreen,

    WebServerSSLWiki,
    MQTTSSLWiki,

...
